# magnum-bootstrap

src/: CMakeLists.txt  PrimitivesExample.cpp
